# BankAccountSimulator

./: CMakeLists.txt
include/: evaluate.h
source/: evaluate.cpp  main.cpp
